Добавляет геометрию страницам

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,28 @@
         background-color: var(--background-page);
         font-family:Roboto, sans-serif;
         letter-spacing: 0.03em;
+        margin: 0px;
         
     }
     .list{
         list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+      .container{
+        width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+        outline: 2px solid tomato;
     }
 
     /*Стили для index.html*/
     /*Header*/
+    .page-header{
+        
+        background-color: thistle;
+    }
+  
     .logo-link{
         text-decoration: none;
     }
@@ -81,6 +95,8 @@
      /*main*/
      .section-main-title{
          background-color: var(--background-darkgrey);
+         text-align: center;
+         margin-bottom: 94px;
      }
      .main-title{
          color: var(--brand-white-color);
@@ -89,13 +105,25 @@
         font-weight: 900;
         font-size: 44px;
         line-height: 1.36;
-        text-align: center;
+        
         letter-spacing: 0.06em;
          text-transform:uppercase;
+
+         margin-top: 0px;
+         margin-bottom: 30px;
+
+         outline:2px solid yellow;
+     }
+     .hidden-title{
+         display: none;
+         
      }
     .button{
+        all: unset;
         background-color: var(--brand-blue-color);
         color:var(--brand-white-color);
+       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
 
         cursor: pointer;
 
@@ -106,25 +134,42 @@
         line-height: 1.87;
         text-align: center;
         letter-spacing: 0.06em;
+
+        display: inline-block;
+        padding: 10px 32px;
+        min-width: 200px;
     }
-   
+  .features-section{
+      margin-bottom: 94px;
+      background-color: yellow;
+  }
     .subtitle .features{
        font-style: normal;
         font-size: 14px;
         line-height: 1.14;
         text-transform:uppercase;
+        margin-bottom: 10px;
+        margin-top:0;
     }
     .subtitle .features-desc{
         color: var(--brand-grey-color);
 
         font-size: 14px;
         line-height: 1.71;
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+    .section-activity{
+        background-color: rebeccapurple;
+        margin-bottom: 94px;
     }
    .section-activity-title{
        font-style: normal;
        font-size: 36px;
         line-height: 1.16;
         text-align: center;
+        margin-top: 0;
+        margin-bottom: 50px;
    }
    .section-team{
        background-color: var(--background-button-grey);
@@ -134,6 +179,10 @@
         font-size: 36px;
         line-height: 1.16;
         text-align: center;
+        margin-top: 0;
+        margin-bottom: 50px;
+      
+        
    }
    .section-team .name{
        font-style: normal;
@@ -141,6 +190,8 @@
         font-size: 16px;
         line-height: 1.18;
         text-align: center;
+        margin-top: 0;
+        margin-bottom: 10px;
    }
    .section-team .job{
        color: var(--brand-grey-color);
@@ -149,10 +200,16 @@
        font-size: 16px;
         line-height: 1.18;
         text-align: center;
+        margin-top: 0;
+        margin-bottom: 30px;
+   }
+   .container.with-padding{
+       padding: 94px 0;
    }
    /*footer*/
    footer{
        background-color: var(--background-darkgrey);
+       
    }
    .adress{
        color: var(--brand-white-color);
@@ -161,6 +218,7 @@
         font-weight: normal;
         font-size: 14px;
         line-height: 1.71;
+        padding-bottom: 60px;
    }
    .footer-nav .contact{
        color: rgba(255, 255, 255, .6);
@@ -184,10 +242,31 @@
         font-size: 26px;
         line-height: 1.19;
     }
+
+   .footer-nav .logo-link{
+        display: inline-block;
+        padding-top: 60px;
+        padding-bottom: 20px;
+        
+    }
  /*portfolio.html*/
+ .page-header.portfolio{
+     margin-bottom: 94px;
+     background-color: salmon;
+ }
+ .project-filter.list{
+     padding-bottom: 50px;
+     
+ }
+ .projects{
+     background-color: rgb(160, 194, 194);
+     margin-bottom:94px ;
+ }
  .button-filter{
+     all: unset;
      color: inherit;
      background-color: var(--background-button-grey);
+     border-radius: 4px;
      font-family: inherit;
 
      font-style: normal;
@@ -212,6 +291,7 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin: 0 24px 4px 24px;
  }
  .project-desc{
 color: var(--brand-grey-color);
@@ -219,4 +299,5 @@ font-style: normal;
 font-weight: normal;
 font-size: 16px;
 line-height: 1.87;
+margin: 0 24px 20px 24px;
  }
