--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,12 @@ img {
 
 /*main*/
 .section-hero-title {
-  background-color: var(--background-darkgrey);
-  /* text-align: center; */
+  /* background-color: var(--background-darkgrey); */
+  background-image: linear-gradient( rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url("../images/hero.jpg");
+  height: 600px;
+  max-width: 1600px;
+
   padding-top: 200px;
   padding-bottom: 200px;
 }
@@ -427,3 +431,6 @@ img {
 .project-block{
   padding: 20px 24px;
 }
+
+
+background: rgba(47, 48, 58, 0.4);
